--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </iframe>
       </div>
       <div class="hero__right-side">
-        <div class="hero__minipod">
+        <div class="hero__3d-m300">
           <div class="camera-rotate">
             <div class="base">
               <div class="spine">
