fixed homepage illustrations

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- Javascript -->
   <script defer src="/app/js/home.js"></script>
-  <script defer src="/app/js/plug-n-play.js"></script>
+  <script defer src="/app/js/plug-animation.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
 
@@ -372,7 +372,7 @@
           Includes main container, racking, back-sheets, Smart PDUs,
           4X ventilation fan, ATMS and awning-based intake system.
         </p>
-        <div class="minipod__illustrations">
+        <div class="bundle__illustrations">
           <img src="images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
