corrected navbar styling

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             </svg>
           </a>
         </li>
-        <li class="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="dropdown" data-open="false">
           <button class="dropdown__button">
             <span class="dropdown__title">Products</span>
             <svg class="dropdown__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -111,7 +111,7 @@
               <path d="M2.5 1L7.95455 6L2.5 11" />
             </svg>
           </button>
-          <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
+          <div class="dropdown__menu">
             <a class="dropdown__menu-item dropdown__link" href="m300" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
