--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     </a>
 
     <section id="minipod" class="minipod">
-      <div class="container flex flex-col gap--sm">
+      <div class="container flex flex-col gap--md ai-c jc-c">
         <div class="flex ai-c gap--md">
           <img class="icon--lg icon--full-height" src="images/icons/icon_logo.svg" alt="Logo Icon">
           <h2 class="minipod__heading flex flex-col">M300 <span class="text--emphasis text--blue">Minipod</span></h2>
