refactoring and removal of instructions on gallery

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       </div>
     </section>
 
-    <a href="#minipod" class="scroll scroll__home">
+    <a href="#bundle" class="scroll scroll__home">
       <span class="scroll__text">scroll for more</span>
       <svg class="scroll__arrow" width="13" height="12" viewBox="0 0 13 12" fill="none"
         xmlns="http://www.w3.org/2000/svg">
@@ -366,31 +366,30 @@
       </svg>
     </a>
 
-    <section id="minipod" class="minipod">
-      <div class="container flex flex-col gap--md ai-c jc-c">
-        <div class="flex ai-c gap--md">
-          <img class="icon--lg icon--full-height" src="images/icons/icon_logo.svg" alt="Logo Icon">
-          <h2 class="minipod__heading flex flex-col">M300 <span class="text--emphasis text--blue">Minipod</span></h2>
-        </div>
-        <p class="minipod__body">
-          Includes main container, racking, back-sheets, Smart PDUs,
-          4X ventilation fan, ATMS and awning-based intake system.
-        </p>
-        <div class="bundle__illustrations">
-          <img src="images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
-          <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
-          <div class="minipod__illustrations--shadow"></div>
-        </div>
-        <a href="m300" class="btn btn--primary btn--as-c">Minipod Info
-          <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-            <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
-              stroke-linejoin="round" />
-          </svg>
-        </a>
+    <section id="bundle" class="bundle container">
+      <div class="flex ai-c gap--md">
+        <img class="icon--lg icon--full-height" src="images/icons/icon_logo.svg" alt="Logo Icon">
+        <h2 class="text__heading flex flex-col ai-start">M300 <span class="text--emphasis text--blue">Minipod</span>
+        </h2>
       </div>
+      <p class="text__body">
+        Includes main container, racking, back-sheets, Smart PDUs,
+        4X ventilation fan, ATMS and awning-based intake system.
+      </p>
+      <div class="bundle__illustrations">
+        <img src="images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
+        <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
+        <div class="minipod__illustrations--shadow"></div>
+      </div>
+      <a href="m300" class="btn btn--primary btn--as-c">Minipod Info
+        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+      </a>
     </section>
 
     <section class="app">
