--- a/m300.html
+++ b/m300.html
@@ -12,7 +12,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting." />
 
   <!-- Social media tags -->
-  <meta property="og:title" content="Digital Shovel • Minipod" />
+  <meta property="og:title" content="Digital Shovel • M300 Minipod" />
   <meta property="og:description"
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting." />
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg" />
