--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -224,33 +224,33 @@
       </div>
     </section>
 
-    <section class="turnkey__grid">
-      <div class="turnkey__grid-item turnkey__grid-item-1">
+    <section class="grid grid__col-6 mtop--xl">
+      <div class="grid-item grid-turnkey__item-1">
         <img src="images/icons/icon_land-lease_v2.svg" alt="Land Lease Icon">
         <h5>Land Lease</h5>
         <p>2-year lease with flat take-or-pay power contract inclusive. Fully prepped site with pad or piles designed
           specifically for the Digital Shovel Minipods.</p>
       </div>
-      <div class="turnkey__grid-item turnkey__grid-item-2">
+      <div class="grid-item grid-turnkey__item-2">
         <img src="images/icons/icon_transformer-hookup_v2.svg" alt="Transformer Hookup Icon">
         <h5>Transformer Hookup</h5>
         <p>Included in this offering is the hook-up of our medium voltage transformer to the low voltage switchgear
           that
           will feed the Minipods.</p>
       </div>
-      <div class="turnkey__grid-item turnkey__grid-item-3">
+      <div class="grid-item grid-turnkey__item-3">
         <img src="images/icons/icon_pod.svg" alt="Minipod Icon">
         <h5>300kW Pod</h5>
         <p>Contracts can be purchased in 300kW increments using our Minipod line. You must take an entire pod and will
           have VPN access to both the pod's miners, as well as the SmartPDU. At the end of the contract, YOU own the
           Minipod.</p>
       </div>
-      <div class="turnkey__grid-item turnkey__grid-item-4">
+      <div class="grid-item grid-turnkey__item-4">
         <img src="images/icons/icon_forklift.svg" alt="Forklift Icon">
         <h5>Deployment</h5>
         <p>Deployment, configuration, and setup of your miners is included in the cost of this contract.</p>
       </div>
-      <div class="turnkey__grid-item turnkey__grid-item-5">
+      <div class="grid-item grid-turnkey__item-5">
         <img src="images/icons/icon_truck.svg" alt="Truck Icon">
         <h5>Delivery</h5>
         <p>Transportation of the pod to the mining farm is included in the cost of this contract.</p>
