--- a/m300.html
+++ b/m300.html
@@ -553,7 +553,7 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div data-specs="true" class="card-9 dropdown card__data card__data--deal flex ai-c gap--md">
+      <div data-specs="true" class="card-9 card__data card__data--deal flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
         <h6 class="pricing__set-heading">Bear Market Promo</h6>
         <h6 class="text--red text--emphasis text--larger">$29,997</h6>
@@ -608,7 +608,7 @@
                 <h6 class="text--blue text--strikethrough">$39,999 - $45,500</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$29,997</h6>
@@ -644,7 +644,7 @@
                 <h6 class="text--blue text--strikethrough">$113,997 - $130,500</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$86,997</h6>
@@ -680,7 +680,7 @@
                 <h6 class="text--blue text--strikethrough">$167,500 - 190,899</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$139,997</h6>
@@ -716,7 +716,7 @@
                 <h6 class="text--blue text--strikethrough">$250,500 - 291,999</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon"
                   href="contact" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
@@ -753,7 +753,7 @@
                 <h6 class="text--blue text--strikethrough">$310,500 - 356,999</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$233,997</h6>
@@ -789,7 +789,7 @@
                 <h6 class="text--blue text--strikethrough">$386,500 - 448,999</h6>
               </div>
               <div data-pricing="true"
-                class="card-9 card__data card__data--deal dropdown pricing__set-detail flex ai-c gap--md">
+                class="card-9 card__data card__data--deal pricing__set-detail flex ai-c gap--md">
                 <img class="icon--sm" src="images/icons/icon_bear-market_v2.svg" alt="Bear Market Icon" />
                 <h6 class="pricing__set-heading">Bear Market Promo</h6>
                 <h6 class="text--red text--emphasis text--larger">$274,997</h6>
